--- a/src/SportsData.Api/SportsData.Api.csproj
+++ b/src/SportsData.Api/SportsData.Api.csproj
@@ -32,6 +32,7 @@
     <None Remove="Infrastructure\Data\Canonical\Sql\GetMatchupForPreviewGeneration.sql" />
     <None Remove="Infrastructure\Data\Canonical\Sql\GetMatchupResultByContestId.sql" />
     <None Remove="Infrastructure\Data\Canonical\Sql\GetMatchupsForCurrentWeek.sql" />
+    <None Remove="Infrastructure\Data\Canonical\Sql\GetMatchupsForPreviewGeneration_Batch.sql" />
     <None Remove="Infrastructure\Data\Canonical\Sql\GetMatchupsForSeasonWeek.sql" />
     <None Remove="Infrastructure\Data\Canonical\Sql\GetRankingsByPollBySeasonByWeek.sql" />
     <None Remove="Infrastructure\Data\Canonical\Sql\GetTeamCard.sql" />
@@ -64,6 +65,7 @@
     <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetMatchupForPreviewGeneration.sql" />
     <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetMatchupResultByContestId.sql" />
     <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetMatchupsForCurrentWeek.sql" />
+    <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetMatchupsForPreviewGeneration_Batch.sql" />
     <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetMatchupsForSeasonWeek.sql" />
     <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetRankingsByPollBySeasonByWeek.sql" />
   </ItemGroup>
