--- a/test/unit/SportsData.Core.Tests.Unit/SportsData.Core.Tests.Unit.csproj
+++ b/test/unit/SportsData.Core.Tests.Unit/SportsData.Core.Tests.Unit.csproj
@@ -11,7 +11,12 @@
     <PackageReference Include="FluentAssertions" Version="7.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="Moq.AutoMock" Version="3.5.0" />
+    <PackageReference Include="Npgsql" Version="9.0.2" />
     <PackageReference Include="xunit" Version="2.9.3" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
