--- a/src/SportsData.ProcessorGen/SportsData.ProcessorGen.csproj
+++ b/src/SportsData.ProcessorGen/SportsData.ProcessorGen.csproj
@@ -9,9 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.AI" Version="9.0.1-preview.1.24570.5" />
+    <PackageReference Include="Microsoft.Extensions.AI" Version="10.2.0" />
     <PackageReference Include="Microsoft.Extensions.AI.Ollama" Version="9.0.1-preview.1.24570.5" />
-    <PackageReference Include="OllamaSharp" Version="5.2.2" />
+    <PackageReference Include="OllamaSharp" Version="5.4.12" />
   </ItemGroup>
 
   <ItemGroup>
